Details
-
Bug
-
Resolution: Fixed
-
Major
-
VirtualBox 5.2.26.
-
0.4.13-dev-119-0e3a043526b1f34061e6168c5807769eeeeb4b53
Description
Steps to reproduce:
- Install MS .NET Framework 2.0 SP2/4.0 from Rapps.
- Reboot.
- Download MS .NET Framework Setup Verification Tool here: https://msdnshared.blob.core.windows.net/media/2018/05/netfx_setupverifier_new.zip.
- Extract netfx_setupverifier.exe from downloaded netfx_seupverifier_new.zip.
- Launch it.
- Select needed .NET Framework version from dropdown list in appeared window. If you have only one .NET Framework version installed (2.0 SP2 or 4.0), you can skip this step.
- Click "Verify" button and wait while it verifies .NET Framework installation. Up to 0.4.13-dev-118-30b800f8b5b7dd5843e022efdfa9e9628ca6b5cd it verifies succesfully. Since 0.4.13-dev-119-0e3a043526b1f34061e6168c5807769eeeeb4b53 verification fails at running .NET 2.0/4.0 test app (see setupverifier_main_04-29-19_18.04.16.txt
). Removing/repairing .NET Framework doesn't help too. Also I noticed that my third-party .NET apps fails to start with CLR error 80004005 since that commit.
Judging by 0.4.13-dev-119-g0e3a043.log
, it fails due to unimplemented (halfplemented) SetThreadStackGuarantee:
WARNING: SetThreadStackGuarantee at dll/win32/kernel32/client/thread.c:986 is UNIMPLEMENTED! |
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\ReactOS\Microsoft.NET\Framework\v2.0.50727\OLEAUT32.dll) failing with status c0000135 |
Tested on the clear ReactOS installation, only with Wine Gecko 2.40 and .NET Framework installed.